# third_party_optimized_routines

./: BUILD.gn  OAT.xml  README.OpenSource  bundle.json  optimized-routines.gni
math/: math_config.h
string/aarch64/: asmdefs.h  memcpy.S  memset.S
string/arm/: asmdefs.h  memcpy.S  strcmp.S  strcpy.c  strlen-armv6t2.S
